# XFER

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  VERSION  build.rs  xfer.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-release.yml  release.yml
docs/: DEVELOPMENT.md  INSTALLATION.md  PROTOCOL.md
scripts/: install.ps1  install.sh  next-release-version.sh  set-release-version.py
src/: cli.rs  client.rs  config.rs  crypto.rs  discovery.rs  error.rs  filesystem.rs  lib.rs  main.rs  net.rs  protocol.rs  reporter.rs  server.rs  transfer.rs  tui.rs  update.rs  version.rs
tests/: cli.rs  release-version.sh
tests/installers/: install-ps1.ps1  install-sh.sh
