[package]
name = "xfer"
version = "3.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.11"
hmac = "0.13"
rand = "0.8.5"
tar = "0.4"
walkdir = "2.5"
glob = "0.3"
hex = "0.4"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
